--- a/processing/index.html
+++ b/processing/index.html
@@ -19,7 +19,7 @@
         <header class="masthead clearfix">
             <a href="../" class="site-avatar"><img src="../assets/img/logo.jpg"></a>
             <div class="site-info">
-                <h1 class="site-name"><a href="../">RESOURCE</a></h1>
+                <p class="site-name"><strong><a href="../">RESOURCE</a></strong></p>
                 <p class="site-description">Creative Coding Resources.</p>
             </div>
             <nav>
