add social icon

--- a/index.html
+++ b/index.html
@@ -69,9 +69,22 @@
 <div class="wrapper-footer">
     <div class="of-container">
         <footer class="footer">
-            <a href="https://github.com/ofcourseio" title="Github"><i class="svg-icon github"></i></a>
-            <a href="https://www.facebook.com/ofcourse.io/" title="Facebook"><i class="svg-icon facebook"></i></a>
-            <a href="https://www.linkedin.com/company/of-course" title="Facebook"><i class="svg-icon linkedin"></i></a>
+            <a href="https://github.com/ofcourseio" title="Github" target="_blank"><i
+                    class="svg-icon github"></i></a>
+            <a href="https://www.linkedin.com/company/of-course" title="Linkedin" target="_blank"><i
+                    class="svg-icon linkedin"></i></a>
+            <a href="http://weibo.com/ofcouseshanghai" title="微博" target="_blank"><i
+                    class="svg-icon github"></i></a>
+            <a href="http://weibo.com/ofcouseshanghai" title="微信" target="_blank"><i
+                    class="svg-icon github"></i></a>
+            <a href="https://www.facebook.com/ofcourse.io/" title="Facebook" target="_blank"><i
+                    class="svg-icon facebook"></i></a>
+            <a href="https://www.twitter.com/ofcourseio/" title="Twitter" target="_blank"><i
+                    class="svg-icon twitter"></i></a>
+            <a href="https://www.twitter.com/ofcourseio/" title="Tumblr" target="_blank"><i
+                    class="svg-icon twitter"></i></a>
+            <a href="http://ofcourseio.lofter.com/" title="Lofter" target="_blank"><i
+                    class="svg-icon twitter"></i></a>
         </footer>
     </div>
 </div>
