--- a/pages/404.html
+++ b/pages/404.html
@@ -6,10 +6,5 @@ permalink: /404.html
 
 <div class="posts">
     <h2 class="text-center">{{ page.title }}...</h2>
-    <h3>Search...</h3>
-    <div class="modal-lg form-group-lg">
-        <input id="search-content" type="text" class="form-control"
-               placeholder="Please input Name & Tags">
-    </div>
-
+    <p><img src="https://coding.net/u/onlylemi/p/img/git/raw/master/of_logo1.jpg" alt="" /></p>
 </div>
